syntax = "proto3";
package adventservice;

option go_package = "github.com/terminalnode/adventofcode2024/common/proto";


service AdventService {
  rpc SolvePart1 (InputData) returns (InputResponse);
  rpc SolvePart2 (InputData) returns (InputResponse);
}

message InputData {
  string input = 1;
}

message InputResponse {
  string result = 1;
}